flux/infrastructure/media/homebox/ingress.yaml
# Auto-split from cluster files
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebox
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: identity-sso-admin-chain@kubernetescrd
spec:
  tls:
  - hosts:
    - homebox.becklab.cloud
    secretName: homebox-tls
  rules:
  - host: homebox.becklab.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homebox
            port:
              number: 7745
